Fixed horizontal scrolling

--- a/src/css/job.css
+++ b/src/css/job.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:700");
 
+body {
+  overflow-x: hidden;
+}
+
 #header2 {
   font-size: 2.125em;
   padding-top: 8px;
@@ -119,8 +123,9 @@
   #grid1 {
     margin-top: 320px;
     margin-left: 40px;
-    margin-right: 100px;
+    margin-right: 80px;
   }
+
   #picture {
     margin-left: -60px;
     height: 11em;
